--- a/mandarin/2.md
+++ b/mandarin/2.md
@@ -8,45 +8,45 @@
 * hua: speech
 ## china: zhong ( chung) guo (kuo)
 
-Cantonese: ??
+* Cantonese: ??
 
-bei ( pai ) north 
-nan:  south
-xi (shi): west
-dong (tung): east
+* north: bei ( pai ) 
+* south: nan
+* east: dong (tung)
+* west: xi (shi)
 
-above / up: shang
-below / down : xia
-sea: hai
-door: men (man)
+* above / up: shang
+* below / down : xia
+* sea: hai
+* door: men (man hindi)
 
-jing (chying) - capital
-nan chying 
+* jing (chying) - capital
+* nan chying 
 
-shanghai? 
-nanching?
-beijing?
+* shanghai? 
+* nanching?
+* beijing?
 
-river: he ( hindi h )
-hebei : to north of river
-henan:  south of river
+* river: he ( hindi h )
+* hebei? to north of river
+* henan?  south of river
 
-shan: mountain
-shandong: east of mountain
-shanxi : west of mountain
+* mountain: shan
+* shandong: east of mountain
+* shanxi : west of mountain
 
-lake: hu
-hubei: north of lake
-hunan: south of lake
+* lake: hu
+* hubei: north of lake
+* hunan: south of lake
 
-settlement: guang ( kuang )
-guangdong : east settlement
-guangsi : west settlement
+* settlement: guang ( kuang )
+* guangdong : east settlement
+* guangshi : west settlement
 
-yun: clouds
-yunnan: below the clouds
-four: si
-river gorge: chuan
+* yun: clouds
+* yunnan: below the clouds
+* four: si
+* river gorge: chuan
 
 
 
