--- a/mandarin/2.md
+++ b/mandarin/2.md
@@ -13,11 +13,18 @@
 * north: bei ( pai ) 
 * south: nan
 * east: dong (tung)
-* west: xi (shi)
+* west: xi (shyi)
 
 * above / up: shang
-* below / down : xia
+* below / down : xia (shiya)
+
 * sea: hai
+* river: he ( hindi h )
+* mountain: shan
+* lake: hu
+* settlement: guang ( kuang )
+
+
 * door: men (man hindi)
 
 * jing (chying) - capital
@@ -27,19 +34,15 @@
 * nanching?
 * beijing?
 
-* river: he ( hindi h )
 * hebei? to north of river
 * henan?  south of river
 
-* mountain: shan
 * shandong: east of mountain
 * shanxi : west of mountain
 
-* lake: hu
 * hubei: north of lake
 * hunan: south of lake
 
-* settlement: guang ( kuang )
 * guangdong : east settlement
 * guangshi : west settlement
 
@@ -48,5 +51,6 @@
 * four: si
 * river gorge: chuan
 
+* chinese script: han tcha
 
 
