--- a/mandarin/3.md
+++ b/mandarin/3.md
@@ -1,1 +1,31 @@
+## pronounciation
 
+* pin (thin) yin
+* each character is a sylable
+* zhou you guang : father of pinyin
+* b: p
+* p: ph
+* ni: 
+* x: shya
+* z: tch
+* xuan zang: shuan tsang
+* d: t
+* t: th
+* tien: thien
+* gong: kong
+* Hang: H (initial) ang (final)
+* J: chy
+* 21 initials ( excluding y & w)
+* 36 finals
+* word may not have an initial, but will have a final ( vowel )
+
+## character 
+* ren: ( person run )
+* ri: ( window to sun )
+* khou: ( square mouth )
+* ra: big ( run + cut)
+* thai: too much ( ta+cut )
+* shang is opposite of shiya
+* zuo : tsuo ( to sit )
+
+* write down slides: 28-32
